fix back button alignments

--- a/assets/globals.css
+++ b/assets/globals.css
@@ -11,6 +11,7 @@ a {
 
 .view-back {
   padding: 16px 0 !important;
+  align-self: flex-start;
 }
 
 .view-heading {
